tests/invalid/readonly/internal_readonly_conflict.pts
prototype A {
    internal readonly int x = 0;
}
